[gd_scene load_steps=6 format=3 uid="uid://cl1710oyetj6h"]

[ext_resource type="Script" path="res://Scenes/Nodes/UI/Items/JournalRead.gd" id="1_45ewt"]
[ext_resource type="Texture2D" uid="uid://000kdtegf1b0" path="res://Assets/Journal.png" id="2_4mvgt"]
[ext_resource type="Texture2D" uid="uid://dqvgegajo36xi" path="res://Assets/Journal 2.png" id="2_73dqi"]
[ext_resource type="Texture2D" uid="uid://du5ymnxgsl63y" path="res://Assets/textbox/Journal 1 entry.png" id="3_5lsn4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cw7kn"]
size = Vector2(48, 67)

[node name="Journal Read" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_45ewt")

[node name="TextureButton" type="Sprite2D" parent="."]
position = Vector2(1097, 595)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_73dqi")

[node name="Panel" type="Panel" parent="TextureButton"]
anchors_preset = -1
anchor_right = 0.256
anchor_bottom = 0.388
offset_left = -66.6666
offset_top = 23.3334
offset_right = 58.3654
offset_bottom = 23.3694

[node name="Label" type="Label" parent="TextureButton/Panel"]
layout_mode = 0
offset_left = 11.6666
offset_top = 8.33331
offset_right = 136.667
offset_bottom = 34.3333
text = "Press [J] to read "

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 331)

[node name="Journal1Entry" type="Sprite2D" parent="."]
position = Vector2(566, 311)
scale = Vector2(0.744141, 0.732787)
texture = ExtResource("3_5lsn4")

[node name="Journal2" type="Area2D" parent="."]
position = Vector2(1001, 576)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Journal2"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_cw7kn")

[node name="Sprite2D2" type="Sprite2D" parent="Journal2"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_4mvgt")

[connection signal="body_entered" from="Journal2" to="." method="_on_journal_2_body_entered"]
